# openacc-exercises

./: CMakeLists.txt  LICENSE  compile.sh  example.c  example2.c  example3.c  example4.c  example5.c  example6.c  example7.c
cuda/: Makefile  example7.cu
